# BencmarkingTool

./: .CMakeLists.txt.swp  .conversions.c.swp  .gitignore  .gitmodules  .includes.h.swp  :q  CMakeLists.txt  ChangeParametersAndRun.sh  Dockerfile  README.md  a.out  conversions.c  define.h  docker_script.sh  fifo.c  file_io.c  generate.c  inc.h  includes.h  input.txt  install-docker.sh  lcm.c  main.c  matrix_conf.cfg  print.c  read_conf.c  run.sh  script.sh  start_script.sh  stat.txt  zsiga.c
build2/: CMakeCache.txt  CTestTestfile.cmake  Makefile  Run  cmake_install.cmake
build2/Testing/Temporary/: CTestCostData.txt
build2/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake  function_test_suite  function_test_suite.xml
headers/: def_linux.h  def_windows.h  defines.h  functions.h
headers/generate/: conversions.h  generate.h
headers/init/: error.h  file_io.h  init.h  read_conf.h  usage.h
headers/process/: binary_search_tree.h  fifo.h  hash_map.h  lcm.h  redblacktree.h  redblacktree2.h  search_duplicate.h
headers/report/: print.h  system_data.h  write_csv.h  write_xml.h
inputs/: cpuinfo.txt  cpuinfo_short.txt  inxi.txt  matrix_conf.cfg  matrix_conf.cfgs
py/: csvparser.py  pyscript.py
results/: .MatrixReports.csv.swp  .TableSize.csv.swp  MatrixReports.csv  MatrixReports.xml  MatrixReports2.csv  MatrixReports2.xml  MatrixRow_250.csv  MatrixRow_250.xml  MatrixSize.csv  MatrixSize.xml  MatrixValues.csv  Matrix_old.xml  Reports1.csv  Reports2.xml  Reports4.csv  Reports4.xml  Res  Result0.csv  Result0.xml  Result1.csv  Result1.xml  Result2.csv  Result2.xml  Result3.csv  Result3.xml  Result4.csv  Result4.xml  Result6.csv  Result6.xml  Result_42.csv  Result_42.xml  Result_avg.csv  Result_avg.xml  Result_docker_cm2_37.csv  Result_docker_cm2_37.xml  Result_docker_cm3_37.csv  Result_docker_cm3_37.xml  Result_docker_cm4_37.csv  Result_docker_cm4_37.xml  Result_docker_cm_37.csv  (+21 more)
results/dut37/: MatrixRow_50.csv  MatrixRow_50.xml  MatrixRow_500.csv  MatrixRow_500.xml  MatrixSize_250.csv  MatrixValues.xml  MatrixValues_250.csv  MatrixValues_250.xml  MatrixValues_500.csv  MatrixValues_500.xml  TableSize.csv  TableSize.xml  TableSize_250.csv  TableSize_250.xml  TableSize_500.csv  TableSize_500.xml  ThreadNr.xml  ThreadNr_250.csv
results/old/: Reports2.csv  Reports3.xml  test.csv
results/test/: Result_dut37.csv  Result_dut37.xml
scripts/: all_parameters.sh  all_parameters2.sh  build.sh  docker_cpu.sh  docker_matrix_values.sh  docker_memory.sh  matrix_row.sh  matrix_size.sh  matrix_values.sh  nohup.out  table_size.sh  thread_nr.sh
src/: conversions.c  error.c  fifo.c  file_io.c  generate.c  hash_map.c  init.c  lcm.c  print.c  read_conf.c  redblacktree.c  system_data.c  usage.c  write_csv.c  write_xml.c
src/generate/: conversions.c  generate.c
src/init/: error.c  file_io.c  init.c  read_conf.c  usage.c
src/process/: .fifo.c.swp  binary_search_tree.c  fifo.c  hash_map.c  lcm.c  redblacktree.c  redblacktree2.c  search_duplicate.c
src/report/: print.c  system_data.c  write_csv.c  write_xml.c
test/: CMakeLists.txt  test.c
