set(COMPILER_OPTIONS)
if(UNIX)
        message( STATUS "Linux")
        EXECUTE_PROCESS( COMMAND uname -m COMMAND tr -d '\n' OUTPUT_VARIABLE ARCHITECTURE )
        message( STATUS "Architecture: ${ARCHITECTURE}" )
        if( ${ARCHITECTURE} STREQUAL "x86_64" )
                set(COMPILER_OPTIONS ${COMPILER_OPTIONS} -O3 -DNDEBUG -Wl,--no-as-needed -lm)
        else()
                set(COMPILER_OPTIONS ${COMPILER_OPTIONS} -O3 -DNDEBUG -march=armv8.2-a -Wl,--no-as-needed -lm)
        endif()
endif(UNIX)

if(WIN32)
        message( STATUS "Windows")
endif(WIN32)

add_executable(function_test_suite test.c)
target_link_libraries(function_test_suite PRIVATE et_main et Lib)
add_test(NAME function_test_suite COMMAND function_test_suite --xml function_test_suite.xml)
target_compile_options(Run PUBLIC ${COMPILER_OPTIONS})
